--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -13,9 +13,14 @@
   --bg-clr: var(--clr-light);
   --text-primary-clr: var(--clr-dark);
   --text-secondary-clr: var(--clr-accent);
+  --text-white-clr: var(--clr-light);
   --sidebar-bg-clr: rgba(228, 239, 231, 0.4);
   --sidebar-nav-hover-clr: rgba(228, 239, 231, 0.7);
+  --modal-bg-clr: var(--clr-light);
   
+  --modal-box-shadow: 0 4px 6px -2px rgba(10, 13, 18, 0.03), 0 2px 2px -1px rgba(10, 13, 18, 0.04), 0 12px 16px -4px rgba(10, 13, 18, 0.08);
+
+  --modal-border: solid 1px #e9eaeb;
   /* sizes */
   --size-xxs: 0.5rem;
   --size-xs: 0.75rem;
@@ -95,4 +100,24 @@ li {
 
 .main__container {
   display: flex;
+}
+
+.hidden {
+  display: none;
+}
+
+.btn {
+  padding: 0.375rem 2rem;
+  border-radius: 0.25rem;
+}
+
+.cancel__btn {
+  background-color: var(--clr-light);
+  color: var(--text-primary-clr);
+  border: solid 1px #d5d7da;
+}
+
+.add__btn {
+  background-color: var(--clr-primary);
+  color: var(--text-white-clr);
 }
