--- a/src/styles/styleCompo/dialogModals.css
+++ b/src/styles/styleCompo/dialogModals.css
@@ -17,8 +17,59 @@
 
 .form__container {
   background-color: var(--modal-bg-clr);
-  padding: 2rem;
+  padding: 0 2rem;
   border: var(--modal-border);
   box-shadow: var(--modal-box-shadow);
   border-radius: 1rem;
+}
+
+.modal__container {
+  margin: 1.5rem 0 2rem 0;
+}
+
+/* styling the input */
+.input__container {
+  display: flex;
+  flex-direction: column;
+} 
+
+.input__label {
+  display: block;
+  font-size: .9rem;
+  font-weight: bold;
+  color: var(--clr-accent);
+  transition: color .3s cubic-bezier(.25,.01,.25,1) 0s;
+}
+
+.input, .text__area {
+  max-width: inherit;
+  height: 32px;
+  background-color: #fdfaf6;
+  border-radius: .2rem;
+  padding: 0 0.6rem;
+  border: solid 1px #d5d7da;
+  font-size: 1rem;
+  transition: border-color .3s cubic-bezier(.25,.01,.25,1) 0s, color .3s cubic-bezier(.25,.01,.25,1) 0s,background .2s cubic-bezier(.25,.01,.25,1) 0s;
+}
+
+.text__area {
+  height: auto;
+  min-height: 80px;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  resize: vertical;
+}
+
+.content__container {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  margin: 1.5rem 0 2.5rem 0;
+}
+
+.grouped__btn {
+  display: flex;
+  gap: 24px;
+  justify-self: end;
+  margin-bottom: 2rem;
 }
