--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -17,6 +17,8 @@
   --sidebar-bg-clr: rgba(228, 239, 231, 0.4);
   --sidebar-nav-hover-clr: rgba(228, 239, 231, 0.7);
   --modal-bg-clr: var(--clr-light);
+
+  --project-list-name-hover: rgba(228, 239, 231, 0.7);
   
   --modal-box-shadow: 0 4px 6px -2px rgba(10, 13, 18, 0.03), 0 2px 2px -1px rgba(10, 13, 18, 0.04), 0 12px 16px -4px rgba(10, 13, 18, 0.08);
 
