--- a/src/styles/styleCompo/sideBar.css
+++ b/src/styles/styleCompo/sideBar.css
@@ -40,3 +40,27 @@
   gap: 1rem;
   align-items: center;
 }
+
+.project__list {
+  margin: 16px 0;
+  padding-right: 0.75rem;
+  display: flex;
+  flex-direction: column;
+  gap: 0.25rem;
+}
+
+.project__list-name {
+  font-size: var(--size-l);
+  line-height: calc(var(--size-l) * 1.3);
+}
+
+.list__name-container {
+  display: flex;
+  align-items: center;
+  gap: 0.875rem;
+  padding: 0.5rem 0;
+}
+
+.list__name-container:hover {
+  background-color: var(--project-list-name-hover);
+}
