chore: Dialog modal can now overlap other elements

--- a/src/styles/styleCompo/dialogModals.css
+++ b/src/styles/styleCompo/dialogModals.css
@@ -1,6 +1,11 @@
 .dialog__container {
   height: 100%;
   margin: auto 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1000; /* Adjust as needed */
 }
 
 .contents__container {
