--- a/src/styles/styleCompo/dialogModals.css
+++ b/src/styles/styleCompo/dialogModals.css
@@ -1,4 +1,4 @@
-.dialog__container {
+.dialog__container-project, .dialog__container-task {
   height: 100%;
   margin: auto 0;
   position: absolute;
