--- a/src/styles/styleCompo/sideBar.css
+++ b/src/styles/styleCompo/sideBar.css
@@ -1,5 +1,5 @@
 #side__bar {
-  width: 20.75rem;
+  width: 22.75rem;
   background-color: var(--sidebar-bg-clr);
   height: 100vh;
 }
@@ -57,11 +57,20 @@
 .list__name-container {
   display: flex;
   align-items: center;
-  gap: 0.875rem;
+  gap: 0.375rem;
   padding: 0.5rem 0;
   cursor: pointer;
 }
 
 .list__name-container:hover {
   background-color: var(--project-list-name-hover);
+}
+
+.add__project-btn p {
+  color: var(--clr-primary);
+}
+
+.add__project-icon {
+  width: 24px;
+  height: 24px;
 }
